--- a/src/core/locales/resources/fa/market.json
+++ b/src/core/locales/resources/fa/market.json
@@ -20,5 +20,6 @@
   "nft-history": "تاریخچه NFT",
   "your-price": "قیمت شما برای فروش",
   "active-sale": "فعالسازی برای فروش",
-  "buy-money": "پول کافی برای انجام تراکنش ندارید"
+  "buy-money": "پول کافی برای انجام تراکنش ندارید",
+  "notify-active-title": "ّبرای فروش فعال شد"
 }
