Move Public locales to Admin & Game

--- a/src/core/locales/resources/en/admin.json
+++ b/src/core/locales/resources/en/admin.json
@@ -1,4 +1,14 @@
 {
+  "home": "Home",
+  "edit": "Edit",
+  "save": "Save",
+  "profile": "Profile",
+  "login": "Login",
+  "logout": "Logout",
+  "username": "UserName",
+  "username-already-exist": "This Username Already Exist",
+  "selectPhoto": "Select Photo",
+  "avatar": "Avatar",
   "LoginWalletSuccess": "Login Wallet Success.",
   "LoginFailed": "Error in Login Wallet",
   "LogoutWalletSuccess": "Logout Wallet Success.",
