--- a/src/core/locales/resources/fa/admin.json
+++ b/src/core/locales/resources/fa/admin.json
@@ -1,4 +1,14 @@
 {
+  "home": "صفحه اصلی",
+  "edit": "ویرایش",
+  "save": "ذخیره",
+  "profile": "پروفایل",
+  "login": "ورود",
+  "logout": "خروج",
+  "username": "نام کاربری",
+  "username-already-exist": "این نام کاربری توسط شخص دیگری انتخاب شده است",
+  "selectPhoto": "انتخاب تصویر",
+  "avatar": "تصویر",
   "LoginWalletSuccess": "لاگین با موفقیت انجام شد.",
   "LoginFailed": "لاگین با خطا روبرو شد",
   "LogoutWalletSuccess": "خروج از سیستم با موفقیت انجام شد.",
