--- a/src/core/locales/resources/fa/game.json
+++ b/src/core/locales/resources/fa/game.json
@@ -9,5 +9,6 @@
   "team": "تیم شما",
   "games": "مسابقات",
   "team-logo": "یک تصویر برای لوگوی تیمتان انتخاب کنید",
-  "team-name": "نام تیم را وارد کنید"
+  "team-name": "نام تیم را وارد کنید",
+  "team-name-already-exist": "این نام تیم توسط شخص دیگری انتخاب شده است"
 }
