Add Tour Locale

--- a/src/core/locales/resources/en/admin.json
+++ b/src/core/locales/resources/en/admin.json
@@ -27,5 +27,8 @@
   "language": "Language",
   "notify": "Notify me if it's for sale",
   "un-notify": "I don't care",
-  "notify-permission-denied": "Permission confirmation is required for notification"
+  "notify-permission-denied": "Permission confirmation is required for notification",
+  "welcome-tour": "Welcome to",
+  "open-tour": "Open Tour",
+  "close": "Close"
 }
