--- a/src/core/locales/resources/en/admin.json
+++ b/src/core/locales/resources/en/admin.json
@@ -1,7 +1,9 @@
 {
   "home": "Home",
+  "help": "Help",
   "edit": "Edit",
   "save": "Save",
+  "close": "Close",
   "profile": "Profile",
   "login": "Login",
   "logout": "Logout",
@@ -29,6 +31,5 @@
   "un-notify": "I don't care",
   "notify-permission-denied": "Permission confirmation is required for notification",
   "welcome-tour": "Welcome to",
-  "open-tour": "Open Tour",
-  "close": "Close"
+  "open-tour": "Open Tour"
 }
