--- a/src/core/locales/resources/fa/admin.json
+++ b/src/core/locales/resources/fa/admin.json
@@ -1,7 +1,9 @@
 {
   "home": "صفحه اصلی",
+  "help": "راهنما",
   "edit": "ویرایش",
   "save": "ذخیره",
+  "close": "بستن فرم",
   "profile": "پروفایل",
   "login": "ورود",
   "logout": "خروج",
@@ -29,6 +31,5 @@
   "un-notify": "واسم مهم نیست",
   "notify-permission-denied": "برای اطلاع رسانی نیاز به تایید مجوز است",
   "welcome-tour": "خوش آمدید به",
-  "open-tour": "مشاهده تور",
-  "close": "بستن فرم"
+  "open-tour": "مشاهده تور"
 }
