--- a/src/core/locales/resources/fa/market.json
+++ b/src/core/locales/resources/fa/market.json
@@ -25,5 +25,6 @@
   "notify-active-title": "ّبرای فروش فعال شد",
   "cnt-sale-cards": "تعداد کارتهای فروخته شده",
   "cnt-post-players": "تعداد بازیکنان به تفکیک پست",
-  "avg-age-players": "میانگین سن بازیکنان"
+  "avg-age-players": "میانگین سن بازیکنان",
+  "change-prices": "نوسانات قیمت"
 }
