Remove Wallet word from Login Logout

--- a/src/core/locales/resources/en/admin.json
+++ b/src/core/locales/resources/en/admin.json
@@ -11,9 +11,9 @@
   "username-already-exist": "This Username Already Exist",
   "selectPhoto": "Select Photo",
   "avatar": "Avatar",
-  "LoginWalletSuccess": "Login Wallet Success.",
+  "LoginSuccess": "Login Success.",
   "LoginFailed": "Error in Login Wallet",
-  "LogoutWalletSuccess": "Logout Wallet Success.",
+  "LogoutSuccess": "Logout Success.",
   "LogoutFailed": "Error Logout Wallet",
   "InstallMetaMask": "Please install MetaMask to continue.",
   "PermissionsNeeded": "Permissions needed to continue.",
