--- a/src/core/locales/resources/fa/admin.json
+++ b/src/core/locales/resources/fa/admin.json
@@ -11,9 +11,9 @@
   "username-already-exist": "این نام کاربری توسط شخص دیگری انتخاب شده است",
   "selectPhoto": "انتخاب تصویر",
   "avatar": "تصویر",
-  "LoginWalletSuccess": "لاگین با موفقیت انجام شد.",
+  "LoginSuccess": "لاگین با موفقیت انجام شد.",
   "LoginFailed": "لاگین با خطا روبرو شد",
-  "LogoutWalletSuccess": "خروج از سیستم با موفقیت انجام شد.",
+  "LogoutSuccess": "خروج از سیستم با موفقیت انجام شد.",
   "LogoutFailed": "خروج از سیستم با خطا انجام شد",
   "InstallMetaMask": "ابتدا MetaMask را نصب کنید",
   "PermissionsNeeded": "برای لاگین نیاز به مجوز دارید",
