Change Locale keys to Kebab-case

--- a/src/core/locales/resources/en/admin.json
+++ b/src/core/locales/resources/en/admin.json
@@ -11,19 +11,19 @@
   "username-already-exist": "This Username Already Exist",
   "selectPhoto": "Select Photo",
   "avatar": "Avatar",
-  "LoginSuccess": "Login Success.",
-  "LoginFailed": "Error in Login Wallet",
-  "LogoutSuccess": "Logout Success.",
-  "LogoutFailed": "Error Logout Wallet",
-  "InstallMetaMask": "Please install MetaMask to continue.",
-  "PermissionsNeeded": "Permissions needed to continue.",
-  "NeedConfirmToConnect": "You Need Confirm Connect.",
-  "NeedLogin": "First you need to login",
-  "ImageSizeError": "Image size have to Less Than 45mb",
-  "ErrorUploadImage": "Error Upload Image",
-  "UnexpectedErrorUploadAvatar": "Unexpected Error in Upload Avatar",
-  "UploadedSuccess": "Avatar Uploaded Success",
-  "GoerliNetwork": "Error in Login Wallet, Set Network on Goerli",
+  "login-success": "Login Success.",
+  "login-failed": "Error in Login Wallet",
+  "logout-success": "Logout Success.",
+  "logout-failed": "Error Logout Wallet",
+  "install-metamask": "Please install MetaMask to continue.",
+  "permissions-needed": "Permissions needed to continue.",
+  "need-confirm-to-connect": "You Need Confirm Connect.",
+  "need-login": "First you need to login",
+  "image-size-error": "Image size have to Less Than 45mb",
+  "error-upload-image": "Error Upload Image",
+  "unexpected-error-upload-avatar": "Unexpected Error in Upload Avatar",
+  "uploaded-success": "Avatar Uploaded Success",
+  "goerli-network": "Error in Login Wallet, Set Network on Goerli",
   "settings": "Settings",
   "color": "Color",
   "language": "Language",
