--- a/src/core/locales/resources/fa/admin.json
+++ b/src/core/locales/resources/fa/admin.json
@@ -11,19 +11,19 @@
   "username-already-exist": "این نام کاربری توسط شخص دیگری انتخاب شده است",
   "selectPhoto": "انتخاب تصویر",
   "avatar": "تصویر",
-  "LoginSuccess": "لاگین با موفقیت انجام شد.",
-  "LoginFailed": "لاگین با خطا روبرو شد",
-  "LogoutSuccess": "خروج از سیستم با موفقیت انجام شد.",
-  "LogoutFailed": "خروج از سیستم با خطا انجام شد",
-  "InstallMetaMask": "ابتدا MetaMask را نصب کنید",
-  "PermissionsNeeded": "برای لاگین نیاز به مجوز دارید",
-  "NeedConfirmToConnect": "برای لاگین باید اتصال را تایید کنید",
-  "NeedLogin": "ابتدا نیاز است لاگین کنید",
-  "ImageSizeError": "سایز تصویر نباید بیشتر از 45 مگابایت باشد",
-  "ErrorUploadImage": "خطا هنگام ذخیره تصویر",
-  "UnexpectedErrorUploadAvatar": "خطای غیرمنتظره هنگام ذخیره تصویر",
-  "GoerliNetwork": "خطا هنگام لاگین، چک کنید که شبکه Goerli باشد",
-  "UploadedSuccess": "تصویر با موفقیت ذخیره شد",
+  "login-success": "لاگین با موفقیت انجام شد.",
+  "login-failed": "لاگین با خطا روبرو شد",
+  "logout-success": "خروج از سیستم با موفقیت انجام شد.",
+  "logout-failed": "خروج از سیستم با خطا انجام شد",
+  "install-metamask": "ابتدا MetaMask را نصب کنید",
+  "permissions-needed": "برای لاگین نیاز به مجوز دارید",
+  "need-confirm-to-connect": "برای لاگین باید اتصال را تایید کنید",
+  "need-login": "ابتدا نیاز است لاگین کنید",
+  "image-size-error": "سایز تصویر نباید بیشتر از 45 مگابایت باشد",
+  "error-upload-image": "خطا هنگام ذخیره تصویر",
+  "unexpected-error-upload-avatar": "خطای غیرمنتظره هنگام ذخیره تصویر",
+  "uploaded-success": "تصویر با موفقیت ذخیره شد",
+  "goerli-network": "خطا هنگام لاگین، چک کنید که شبکه Goerli باشد",
   "settings": "تنظیمات",
   "color": "رنگ",
   "language": "زبان",
