--- a/src/core/locales/resources/fa/market.json
+++ b/src/core/locales/resources/fa/market.json
@@ -26,5 +26,6 @@
   "cnt-sale-cards": "تعداد کارتهای فروخته شده",
   "cnt-post-players": "تعداد بازیکنان به تفکیک پست",
   "avg-age-players": "میانگین سن بازیکنان",
-  "change-prices": "نوسانات قیمت"
+  "change-prices": "نوسانات قیمت",
+  "full-buys": "حداکثر 9 کارت می توانید داشته باشید"
 }
