--- a/src/core/locales/resources/fa/game.json
+++ b/src/core/locales/resources/fa/game.json
@@ -10,5 +10,6 @@
   "games": "مسابقات",
   "team-logo": "یک تصویر برای لوگوی تیمتان انتخاب کنید",
   "team-name": "نام تیم را وارد کنید",
-  "team-name-already-exist": "این نام تیم توسط شخص دیگری انتخاب شده است"
+  "team-name-already-exist": "این نام تیم توسط شخص دیگری انتخاب شده است",
+  "no-for-sale": "کارتهایی که برای فروش است، نمی توانید به تیم اضافه کنید"
 }
