--- a/src/core/locales/resources/fa/market.json
+++ b/src/core/locales/resources/fa/market.json
@@ -10,6 +10,7 @@
   "country": "کشور",
   "position": "پست",
   "team": "باشگاه",
+  "price": "قیمت",
   "product-item-details": "جزئیات کارت",
   "favorites": "مورد علاقه ها",
   "buyList": "کارت های شما",
