--- a/src/core/locales/resources/en/market.json
+++ b/src/core/locales/resources/en/market.json
@@ -10,6 +10,7 @@
   "country": "Country",
   "position": "Position",
   "team": "Team",
+  "price": "Price",
   "product-item-details": "Card Details",
   "favorites": "Favorites",
   "buyList": "Your Cards",
