--- a/src/core/locales/resources/fa/admin.json
+++ b/src/core/locales/resources/fa/admin.json
@@ -32,6 +32,7 @@
   "notify-permission-denied": "برای اطلاع رسانی نیاز به تایید مجوز است",
   "welcome-tour": "خوش آمدید به",
   "open-tour": "مشاهده تور",
+  "Do-not-show-tour": "راهنما را دیگر نمایش نده",
   "mail": "ایمیل",
   "mobile": "موبایل",
   "send-code": "ارسال کد",
